﻿[B]Changelog[/B]
* Fixed: moved to the new RTL XL API (Fixes #1052)

[I]Previous changes[/I]
* Fixed: sometimes a stream would not start at the beginning. Applying the VTM fix (See #820)
* Removed: iRTL channel as it is no longer supported
* Updated: RTL textures
* Fixed: RTL added a user-agent check and returns a "418 I'm a teapot" error
* Fixed: Some program listings did not work in the RTL channel on 32 bit systems
* Fixed: RTL broke their paging..and my channel (Fixes #591)
* Fixed: Some RTL shows do not have any descriptions, and that broke stuff